--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://p.trellocdn.com/power-up.min.js"></script>
   <script>
     var onBtnClick = function (t, opts) {
-      console.log(t.members)
+      console.log(t.lists)
       return t.popup({
         title: 'Estimates',
         items: [{
