--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <script src="https://p.trellocdn.com/power-up.min.js"></script>
   <script>
     var onBtnClick = function (t, opts) {
-      var doingListId = t.list('id', 'name')
+      var doingListId = t.lists('id', 'name')
         .then(function (list) {
+          console.log('list', list)
           if (list.name === 'doing') {
             return list.id
           }
         });
-      t.card('all').then(function (card) {
+      t.cards('all').then(function (card) {
+        console.log('card', card)
         if (card.listId === doingListId) {
           console.log(card.name)
         }
