--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     var onBtnClick = function (t, opts) {
       var doingListId = t.lists('id', 'name')
         .then(function (list) {
-          console.log('list', list)
-          if (list.name === 'doing') {
-            return list.id
-          }
+          var doingList = list.filter(function (listItem) {
+            return listItem.name == 'doing'
+          });
+          doingListId = doingList.id
+          console.log('selected list as doing is', doingList.name, doingList.id)
         });
       console.log('doing list id is', doingListId)
-      t.cards('all').then(function (card) {
-        console.log('card', card)
-        if (card.listId === doingListId) {
-          console.log(card.name)
-        }
+      t.cards('all').then(function (cards) {
+        var doingCards = cards.filter(function (card) {
+          return card.listId == doingListId;
+        });
+        console.log('doing cards are: ', doingCards)
       });
       return t.popup({
         title: 'Estimates',
