--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             return list.name == 'doing'
           });
         });
-        console.log('doing list id is ', doingList.id)
-      var doingCards = await t.cards('all').then(function (cards) {
+      console.log('doing list id is ', doingList.id)
+      var doingCards = await t.cards('all')
+      .then(function (cards) {
         return cards.filter(function (card) {
+          console.log('filter card', card.name, card.listId, doingList.id)
           return card.listId == doingList.id;
         });
       });
