--- a/index.html
+++ b/index.html
@@ -55,34 +55,20 @@
                       });
                       const estimatePerMember = []
                       cardsInList.forEach(card => {
-                        console.log(card)
-                        card.members.forEach(cardMember => {
+                        if (card.members.length == 0) {
+                          estimatePerMember['no assignee'] = (estimatePerMember['no assignee'] || 0) + 1
+                        } else {
+                          card.members.forEach(cardMember => {
                             estimatePerMember[cardMember.username] = (estimatePerMember[cardMember.username] || 0) + 1
                           });
-                        });
+                        }
+                      });
                     console.log('group', estimatePerMember)
                     t.popup({
                       title: "",
-                      items: [
-                        {
-                          text: "Choose List",
-                          callback: function (t, opts) {
-                            console.log("Choose Time");
-                          },
-                        },
-                        {
-                          text: "In 1 hour",
-                          callback: function (t, opts) {
-                            console.log("In 1 hour");
-                          },
-                        },
-                        {
-                          text: "In 2 hours",
-                          callback: function (t, opts) {
-                            console.log("In 2 hours");
-                          },
-                        },
-                      ],
+                      items: estimatePerMember.map(item => {
+                         text: item
+                      })
                     });
                   },
                 };
