--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                       title: 'Estimates',
                       items: estimatePerMember.map(function(item) {
                          return {
-                          text: item.username + '\test: ' + item.estimates+ '\telapsed: ' + item.elapsed,
+                          text: item.username + ':\t\test: ' + item.estimates+ '\t\telapsed: ' + item.elapsed,
                           callback: function() {}
                          };
                       })
