move to another js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
-    <script>
+    <script type="module">
       import { showEstimates } from "/public/js/board_button_show_estimates.js"
       // var showEstimates = async function (t, opts) {
       //   return t.popup({
